@startuml
!theme plain
hide circle
skinparam linetype ortho
skinparam entityBackgroundColor #FEFEFE
skinparam entityBorderColor #333333
skinparam entityFontSize 12

' ==========================================
' LEGEND
' ==========================================
legend right
  **Legend**
  ==
  PK : Primary Key
  FK : Foreign Key
endlegend

' ==========================================
' MAIN TABLES
' ==========================================

entity "Actors" as Actors {
  * id : UUID [PK]
  --
  name : string
  email : string [Unique]
  role : string
  status : string
  citizenType : string
  engagementScore : int
}

entity "Reports" as Reports {
  * id : UUID [PK]
  --
  citizenId : UUID [FK]
  theme : string
  title : string
  content : string
  status : string
}

entity "Investigations" as Investigations {
  * id : UUID [PK]
  --
  inboxSubjectId : UUID [FK,Unique]
  journalistId : UUID [FK]
  mediaCategory : string
  draftVerdict : string
  investigationNotes : string
  attemptCount : int
  status : string
}

entity "Evidence" as Evidence {
  * id : UUID [PK]
  --
  investigationId : UUID [FK]
  watcherId : UUID [FK]
  content : string
  title : string
}

entity "Publications" as Publications {
  * id : UUID [PK]
  --
  investigationId : UUID [FK,Unique]
  approvedById : UUID [FK]
  finalVerdict : string
  publishedAt : DateTime
  isCorrection : boolean
}

entity "Notifications" as Notifications {
  * id : UUID [PK]
  --
  actorId : UUID [FK]
  type : string
  theme : string
  message : string
  isRead : boolean
  publicationId : UUID [FK,Nullable]
  investigationId : UUID [FK,Nullable]
}

entity "WatcherApplications" as WatcherApplications {
  * id : UUID [PK]
  --
  actorId : UUID [FK,Unique]
  motivation : string
  status : string
}

entity "InboxSubjects" as InboxSubjects {
  * id : UUID [PK]
  --
  theme : string
  description : string
  createdById : UUID [FK]
  reportId : UUID [FK,Nullable]
  origin : string
  status : string
}

' ==========================================
' RELATIONS
' ==========================================
Actors ||--o{ Reports : "submits"
Actors ||--o{ Investigations : "conducts"
Actors ||--o{ Evidence : "provides"
Actors ||--o{ Publications : "approves"
Actors ||--o{ InboxSubjects : "creates"
Actors ||--o{ Notifications : "receives"
Actors ||--o{ WatcherApplications : "applies"

Reports ||--o| InboxSubjects : "becomes"
InboxSubjects ||--o| Investigations : "assigned to"
Investigations ||--o{ Evidence : "contains"
Investigations ||--|| Publications : "produces"

Publications ||--o{ Notifications : "generates"

@enduml
